# 2EZConfig-V2

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  THIRD_PARTY_LICENSES  patches.json  report_ez2dj_sound_system.md
.github/workflows/: release.yml
documentation/patches/: README.md
patches/: apply-glfw-xp-compat.cmake  glfw-xp-compat.patch
src/2ez-dll/: CMakeLists.txt  ddraw_hook.cpp  ddraw_hook.h  dll.cpp  dll_hardlock_debug.cpp  dll_input.cpp  dll_input.h  dll_output.cpp  dll_output.h
src/2ez-dll/audio-eq/: audio_eq.cpp  audio_eq.h  biquad.c  biquad.h  eq_processor.c  eq_processor.h  hypersonik_hook.cpp  hypersonik_hook.h  mixer_hook.cpp  mixer_hook.h
src/2ez-dll/ddraw/: ddraw3_fix.cpp  ddraw3_fix.h  ddraw4_fix.cpp  ddraw4_fix.h  ddraw7_fix.cpp  ddraw7_fix.h  ddraw_hook_utils.cpp  ddraw_hook_utils.h  ddraw_vertex_utils.cpp  ddraw_vertex_utils.h  ddraw_vtable.h
src/2ez-dll/ez2-io/: ez2_io.h  ez2_io_hooks.cpp  ez2_io_input.cpp  ez2_io_input.h  ez2_io_output.cpp  ez2_io_output.h
src/2ez-dll/ez2dancer-io/: ez2dancer_io.h  ez2dancer_io_hooks.cpp  ez2dancer_io_input.cpp  ez2dancer_io_input.h  ez2dancer_io_output.cpp  ez2dancer_io_output.h
src/2ez-dll/ez2dj-io/: ez2dj_io.h  ez2dj_io_hooks.cpp  ez2dj_io_input.cpp  ez2dj_io_input.h  ez2dj_io_output.cpp  ez2dj_io_output.h
src/2ez-dll/sabin-io/: sabin_io.h  sabin_io_hooks.cpp  sabin_io_input.cpp  sabin_io_internal.h  sabin_io_output.cpp
src/2ez-dll/shared-io/: shared_io.cpp  shared_io.h
src/2ezconfig-exe/: CMakeLists.txt  app.rc  licenses.h.in  main.cpp  md5.h  patches.json
src/common/include/: game_defs.h  game_detect.h  game_md5.h  md5.h  strings.h  utils.h
src/ez2-dll/: CMakeLists.txt  ddraw_hook.cpp  ddraw_hook.h  dll.cpp  dll_input.cpp  dll_input.h  dll_output.cpp  dll_output.h
src/ez2config-exe/: CMakeLists.txt  app.rc  bindings.cpp  bindings.h  main.cpp  md5.h  patches.json
src/libs/bindings/: CMakeLists.txt  bindings.cpp  bindings.h
src/libs/hardlock/: CMakeLists.txt  io.hardlock.emulator.c  io.hardlock.emulator.h  io.hardlock.hooks.c  io.hardlock.hooks.h  io.hardlock.internal.h  io.hardlock.protocol.h  kitchen_sink.h  ks.debug.c  ks.hotpatch.c  ks.memutils.c  ks.memutils.h  ks.misc.c
src/libs/hooks/: CMakeLists.txt  hooks.cpp  hooks.h
src/libs/hypersonik/: CMakeLists.txt  precompiled.h
src/libs/hypersonik/guid/: guid.c
src/libs/hypersonik/src/: converter.c  ds-api.c  ds-buffer-pri.c  ds-buffer.c  ds-buffer.h  reaper.c  trace.c  wasapi.c
src/libs/injector/: CMakeLists.txt  injector.cpp  injector.h
src/libs/input/: CMakeLists.txt  binding.h  device.h  device_info.h  input.cpp  input.h  input_manager.cpp  input_manager.h  input_placeholder.cpp
src/libs/logger/: CMakeLists.txt  logger.cpp  logger.h
src/libs/memutils/: CMakeLists.txt  hotpatch.c  memutils.c  memutils.h
src/libs/output/: output.h
src/libs/patches/: CMakeLists.txt  patch_store.cpp  patch_store.h
src/libs/settings/: CMakeLists.txt  settings.cpp  settings.h
src/libs/utilities/: CMakeLists.txt  utilities.h
src/resources/: patches.json
